--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Задание по HTML</title>
+    <link rel="stylesheet" href="style.css" >
 </head>
 <body>
+    <h1 class="main">
+        Если тут не будет 5, я заплачу.
+    </h1>
+
+    <p id="dayn">
+        piska slona
+    </p>
+
+    <div class="bolshyaia-piska-slona">
+        <p>
+            Я не обманываю людей.
+        </p>
+
+        <span>
+            Нет, не старался.
+        </span>
+    </div>
     
+
     
     </body>
 </html>
